gave textBox fixed height to prevent jump reverted to old body zoom

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+    margin 60px, auto;
     width: 70%;
     background-image: url("https://trevorColby.github.io/media/homepage/pictures/HopPhoto.jpg");
     background-size: cover;
@@ -15,6 +16,7 @@ body {
  border-color: rgb(64,64,64);
  border-radius: 25px;
  border-width: 10px;
+ height: 260px;
 }
 
 
